--- a/Examples/Makefile
+++ b/Examples/Makefile
@@ -1,10 +1,4 @@
 #Runs low pass example with equation specified in file.
 runLowPassExample:
-	python LowPass/LowPassExample.py
-#Not working 	
-runSpectrumCalculationExample:
-	python SpectrumCalculation/SpectrumCalculationExample.py /groups/PSUDASArray/TrebleEx/Kafadar_Coupling_deformation_UTC-YMD20201202-HMS184217.063_seq_00000000017.hdf5
-#Not working
-vhdf5Example:
-	python VHDF5/VHDF5Example.py /groups/PSUDASArray/TrebleEx/combined_data.vhdf5
-	
+	python3 LowPass/LowPassExample.py
+
