Added lowpass example

--- a/Examples/Makefile
+++ b/Examples/Makefile
@@ -1,4 +1,4 @@
 #Runs low pass example with equation specified in file.
 runLowPassExample:
-	python3 LowPass/LowPassExample.py
+	python3 LowPassExample.py
 
