added plot legend

--- a/Examples/Makefile
+++ b/Examples/Makefile
@@ -1,5 +1,6 @@
 #Runs low pass example with equation specified in file.
 runLowPassExample:
 	rm -f figures/lowpassFigure.png
+	rm -f figures/amplitudeSpectrum.png
 	python3 lowpassEx.py
 
