working on plotting amplitude spectrum

--- a/Examples/Makefile
+++ b/Examples/Makefile
@@ -2,5 +2,8 @@
 runLowPassExample:
 	rm -f figures/lowpassFigure.png
 	rm -f figures/amplitudeSpectrum.png
+	rm -f figures/amplitudeSpectrumOfFilteredSignal.png
+	rm -f figures/logAmplitudeSpectrum.png
+	rm -f figures/logAmplitudeSpectrumOfFilteredSignal.png
 	python3 lowpassEx.py
 
