Starting work on downsampling

--- a/Examples/Makefile
+++ b/Examples/Makefile
@@ -1,9 +1,9 @@
 #Runs low pass example with equation specified in file.
 runLowPassExample:
 	rm -f figures/lowpassFigure.png
-	rm -f figures/amplitudeSpectrum.png
-	rm -f figures/amplitudeSpectrumOfFilteredSignal.png
-	rm -f figures/logAmplitudeSpectrum.png
-	rm -f figures/logAmplitudeSpectrumOfFilteredSignal.png
+	rm -f figures/ampSpectrum.png
+	rm -f figures/ampSpectrumFiltered.png
+	rm -f figures/logAmpSpectrum.png
+	rm -f figures/logAmpSpectrumFiltered.png
 	python3 lowpassEx.py
 
